<resources>
    <string name="app_name">달리</string>
    <string name="default_web_client_id2">233937818335-7mrg3j77q7ojjb5b0nlbptgrbrt2cnme.apps.googleusercontent.com</string>
    <string name="run_distance">달린 거리</string>
    <string name="friend">친구</string>
    <string name="km">km</string>
    <string name="people">명</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">설정</string>
    <string name="update_profile">내 정보 수정</string>
    <string name="logout">로그아웃</string>
    <string name="search">검색</string>
    <string name="friend_apply">친구 신청</string>
    <string name="all_friend">모든 친구</string>
    <string name="delete">삭제</string>
    <string name="delete_friend_answer">친구를 삭제하시겠습니까?</string>
    <string name="friend_profile">친구 프로필</string>
    <string name="accept">수락</string>
    <string name="deny">거절</string>
    <string name="friend_add">친구 추가</string>
    <string name="complete_apply">신청 완료</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="edit_profile_image">프로필 사진 변경</string>
    <string name="setting_nickname">닉네임 설정</string>
    <string name="user_message">상태 메세지</string>
    <string name="setting_address">지역 설정</string>
    <string name="address_example">시, 군, 구로 검색 (ex. 서울시 종로구)</string>
    <string name="nickname_ok">사용 가능한 닉네임입니다</string>
    <string name="nickname_no">사용 불가능한 닉네임입니다</string>
    <string name="nickname_restriction">영어, 한글, 숫자만 사용 가능합니다</string>
    <string name="activity">Activity</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="this_week">이번주</string>
    <string name="running_num">달린 횟수</string>
    <string name="pace_avg">평균 페이스</string>
    <string name="time_total">총 시간</string>
    <string name="heart_avg">평균 심박수</string>
    <string name="num">회</string>
    <string name="recent_records">최근 기록</string>
    <string name="more_records">최근 기록 더보기</string>
    <string name="all_records">전체 기록</string>
    <string name="get_achievements">달성한 도전</string>
    <string name="more_achievements">달성한 도전 더보기</string>
    <string name="all_achievements">전체 도전</string>
    <string name="participate_challenges">참여한 챌린지</string>
    <string name="more_challenges">참여한 챌린지 더보기</string>
    <string name="all_challenges">전체 챌린지</string>
    <string name="calories">칼로리</string>
    <string name="kcal">kcal</string>
    <string name="speed_avg">평균 속력</string>
    <string name="ranking">랭킹</string>
    <string name="kmh">km/h</string>
    <string name="title">제목</string>
    <string name="section">구간</string>
    <string name="more_sections">구간별 정보 더보기</string>
    <string name="time">시간</string>
    <string name="firebase_name">Darly</string>
</resources>