<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ssafy.darly.viewmodel.RecordDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/section"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/km"
            android:textColor="@color/gray_600"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:text="@string/pace_avg"
            android:textColor="@color/gray_600"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView35"
            app:layout_constraintTop_toTopOf="@+id/textView35" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            setSectionItems="@{viewModel.sections}"
            setSectionMinValue="@{viewModel.minSectionValue}"
            setSectionMinIndex="@{viewModel.minSectionIndex}"
            setSectionGapValue="@{viewModel.gapSectionValue}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>