<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ssafy.darly.viewmodel.StatViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/button_stroke_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/weekBtn"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:background="@drawable/button_transparent_round"
            android:backgroundTint="@color/main"
            android:text="@string/week"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/monthBtn"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:background="@drawable/button_transparent_round"
            android:text="@string/month"
            android:textAllCaps="false"
            android:textColor="@color/gray_700"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/weekBtn"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yearBtn"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:background="@drawable/button_transparent_round"
            android:text="@string/year"
            android:textAllCaps="false"
            android:textColor="@color/gray_700"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/monthBtn"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/allBtn"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:background="@drawable/button_transparent_round"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="@color/gray_700"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/yearBtn"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintWidth_percent="0.25" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:src="@drawable/ic_chevron_down"
            app:layout_constraintEnd_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="5dp"
            android:paddingEnd="25dp"
            android:text="@string/this_week"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="25.84"
            android:textColor="@color/black"
            android:textSize="58sp"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/futura_bold"
            android:paddingBottom="10dp"
            android:text="@string/km"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView23"
            app:layout_constraintStart_toEndOf="@+id/textView23" />


        <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_num"
                android:textColor="@color/gray_600"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pretendard_semibold"
                android:paddingBottom="5dp"
                android:text="@string/num"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView28"
                app:layout_constraintStart_toEndOf="@+id/textView28" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace_avg"
                android:textColor="@color/gray_600"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="6'45''"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_total"
                android:textColor="@color/gray_600"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="1:01:22"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/heart_avg"-->
<!--                android:textColor="@color/gray_600"-->
<!--                android:textSize="13sp"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->


<!--            <TextView-->
<!--                android:id="@+id/textView30"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/pretendard_semibold"-->
<!--                android:text="86"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="23sp" />-->

<!--            <ImageView-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:src="@drawable/ic_heart"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/textView30"-->
<!--                app:layout_constraintStart_toEndOf="@+id/textView30"-->
<!--                app:layout_constraintTop_toTopOf="@+id/textView30" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>