<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ssafy.darly.viewmodel.MypageUpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MyPageUpdateActivity">

        <TextView
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cancelBtn" />

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="22dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_700"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="96dp"
            app:civ_border_color="#F7F8FB"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImage="@{viewModel.userImage}" />

        <TextView
            android:id="@+id/editImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_image"
            android:textColor="@color/gray_700"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/circleImageView"
            app:layout_constraintStart_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/setting_nickname"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editImageBtn" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_seacrh_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <EditText
                android:id="@+id/editNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@null"
                android:imeOptions="actionSearch"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{viewModel.userNickname}"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/nicknameCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="3dp"
            android:text="@string/nickname_ok"
            android:textColor="#99120C32"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

<!--        <TextView-->
<!--            android:id="@+id/nicknameCheckNo"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="3dp"-->
<!--            android:text="@string/nickname_no"-->
<!--            android:textColor="#99FB5454"-->
<!--            android:textSize="13sp"-->
<!--            android:visibility="invisible"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />-->

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_message"
            android:textColor="@color/black"
            android:layout_marginTop="48dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_seacrh_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19">

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@null"
                android:imeOptions="actionSearch"
                android:maxLength="100"
                android:text="@{viewModel.userMessage}"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/setting_address"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_seacrh_bar"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"></LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search_gray"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintStart_toStartOf="@+id/linearLayout6"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

        <TextView
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="35dp"
            android:paddingTop="7dp"
            android:text="@string/address_example"
            android:textColor="@color/gray_600"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            setMyPageUpdateItems="@{viewModel.userAddress}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>