<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ssafy.darly.viewmodel.SectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        android:paddingHorizontal="23dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="5dp"
            android:paddingVertical="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/ic_chevron_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/section"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:background="@drawable/location_list_background">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textColor="@color/gray_600"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:text="@string/pace_avg"
                android:textColor="@color/gray_600"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView41"
                app:layout_constraintTop_toTopOf="@+id/textView41" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calorie"
                android:layout_marginEnd="1dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView43"
                app:layout_constraintEnd_toStartOf="@+id/textView43"
                app:layout_constraintTop_toTopOf="@+id/textView43"/>

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/gray_600"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView42" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                setSectionDetailItems="@{viewModel.sections}"
                setSectionDetailMinValue="@{viewModel.minSectionValue}"
                setSectionDetailMinIndex="@{viewModel.minSectionIndex}"
                setSectionDetailGapValue="@{viewModel.gapSectionValue}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>